--- a/sections/category-section.liquid
+++ b/sections/category-section.liquid
@@ -1,4 +1,4 @@
-{{ 'category-section.scss' | asset_url | stylesheet_tag }}
+{{ 'category-section.css' | asset_url | stylesheet_tag }}
 
 <div class="collections">
     <div class="collections__container page-width">
