--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -20,7 +20,7 @@
         assign body_font_italic = settings.type_body_font | font_modify: 'style', 'italic'
         assign body_font_bold_italic = body_font_bold | font_modify: 'style', 'italic'
       %}
-  
+      {% render 'color-swatcher' %}
      
     </head>
   
