--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -25,6 +25,8 @@
     </head>
   
     <body>
+      {% section 'header-section' %}
+
      
         {{ content_for_layout }}
         {% section 'footer-section' %}
