--- a/sections/collections-section.liquid
+++ b/sections/collections-section.liquid
@@ -36,7 +36,7 @@
                   </div>
                 {% endif %}
                 {% if collection.title != blank %}
-                  <span class="pre-title text-align capitalize">{{ collection.title }}</span>
+                  <h3 class="pre-title text-align capitalize">{{ collection.title }}</h3>
                 {% endif %}
               </a>
             </div>
