--- a/sections/featured-blog.liquid
+++ b/sections/featured-blog.liquid
@@ -38,8 +38,8 @@
                                         <div class="blog-section__blog-article">
                                             <span class="blog-section__date">{{ article.published_at }}</span>
                                             <!-- <span class="blog-section__blog-author"></span> -->
-                                            <div class="blog-section__excpert">{{ article.excerpt }}</div>
-                                            <div class="blog-section__content">{{ article.content }}</div>
+                                            <h3 class="blog-section__excpert">{{ article.excerpt }}</h3>
+                                            <p class="blog-section__content">{{ article.content }}</p>
                                         </div>
                                     </a>
                                 </div>
