--- a/sections/sliding-banner.liquid
+++ b/sections/sliding-banner.liquid
@@ -3,7 +3,7 @@
 <div class="sliding-banner">
     <div class="full-width">
         <div class="sliding-banner__wrapper">
-            <div class="sliding-banner__swiper-container" js-sliding-banner>
+            <div class="sliding-banner__swiper-container" js-marquee>
                 <div class="sliding-banner__slide-text swiper-wrapper">
                     {%- for block in section.blocks -%}
                         {%- if  block.settings.text != blank -%}
