--- a/sections/hero-banner.liquid
+++ b/sections/hero-banner.liquid
@@ -16,10 +16,10 @@
                                 <h1 class="hero-banner__title uppercase ">{{ section.settings.title }}</h1>
                             {% endif %}
                             {% if section.settings.text != blank %}
-                                <p class="hero-banner__text">{{ section.settings.text }}</p>
+                                <p class="hero-banner__text">{{ section.settings.text }}</p> 
                             {% endif %}
                             {% if section.settings.link_text != blank %}
-                                <a href="{{ section.settings.link }}" class="hero-banner__btn cursor-pointer capitalize">{{ section.settings.link_text }}</a>
+                                <a href="{{ section.settings.link }}" class="btn cursor-pointer capitalize">{{ section.settings.link_text }}</a>
                             {% endif %}
                         </div>
                     </div>
