--- a/sections/newsletter-section.liquid
+++ b/sections/newsletter-section.liquid
@@ -47,7 +47,7 @@
                     >
                   </div> 
                   {% if section.settings.btn_text != blank %}
-                      <button class="capitalize subscribe-btn btn-wrap flex align-center flex-center"  type="submit" class="btn" name="commit" aria-label="{{ 'general.newsletter_form.submit' | t }}">{{section.settings.btn_text}}</button>
+                      <button class="btn capitalize subscribe-btn flex align-center flex-center"  type="submit" class="btn" name="commit" aria-label="{{ 'general.newsletter_form.submit' | t }}">{{section.settings.btn_text}}</button>
                   {% endif %} 
                 </div>
               {%- endunless -%} 
