--- a/assets/featured-collection.css
+++ b/assets/featured-collection.css
@@ -13,6 +13,10 @@
     width: 100%;
     height: 100%;
     border-radius: 35px; }
+  .featured-collection .btn {
+    position: absolute;
+    bottom: 30px;
+    left: 30px; }
   .featured-collection .wrapper {
     margin: 0 -15px; }
   .featured-collection .title {
@@ -27,19 +31,6 @@
     color: #FFFFFF; }
   .featured-collection .image-wrapper {
     position: relative; }
-  .featured-collection .btn {
-    max-width: 179px;
-    position: absolute;
-    left: 30px;
-    bottom: 30px;
-    z-index: 9;
-    width: 100%;
-    font-size: 16px;
-    font-weight: 700;
-    background-color: white;
-    display: flex;
-    height: 50px;
-    color: #242424; }
   .featured-collection .beta img {
     object-fit: contain; }
   .featured-collection .product-wrap {
@@ -54,7 +45,6 @@
     font-size: 40px; }
   .featured-collection .btn {
     font-size: 14px;
-    max-width: 150px;
     height: 40px; }
   .featured-collection .product-wrap {
     padding: 0 10px; }
@@ -70,8 +60,6 @@
     margin-bottom: 100px; }
     .featured-collection .title {
       font-size: 36px; }
-    .featured-collection .btn {
-      max-width: 134px; }
     .featured-collection .wrapper {
       display: block;
       margin: 0; }
@@ -81,21 +69,20 @@
     .featured-collection .alpha {
       margin-bottom: 20px; }
     .featured-collection .title {
-      font-size: 40px; }
-    .featured-collection .btn {
-      max-width: 150px; } }
+      font-size: 40px; } }
 
 @media (max-width: 767px) {
   .featured-collection {
     margin-bottom: 80px; }
     .featured-collection .title {
-      font-size: 36px;
+      font-size: 24px;
       top: 20px;
       left: 20px;
       max-width: 240px; }
     .featured-collection .btn {
       left: 20px;
-      bottom: 20px; }
+      bottom: 20px;
+      padding: 8px 18px; }
     .featured-collection .product-wrap {
       padding: 0 5px; }
     .featured-collection .product-wrapper {
