--- a/assets/footer.css
+++ b/assets/footer.css
@@ -36,8 +36,6 @@
     line-height: 1.4;
     color: #FFFFFF;
     letter-spacing: 0; }
-  .footer__change-color {
-    background-color: #D9F801 !important; }
   .footer__main-grid {
     margin: 0 -40px;
     margin-bottom: 87px; }
@@ -50,7 +48,12 @@
     background-color: #FFFFFF;
     padding: 10px;
     border-radius: 50%;
-    margin: 0 6px; }
+    margin: 0 6px;
+    transition: 0.3s all ease-in-out;
+    cursor: pointer; }
+    .footer__icon:hover {
+      transition: 0.3s all ease-in-out;
+      background-color: #D9F801 !important; }
   .footer__payment-item {
     padding: 0 17.5px; }
   .footer__payment-icon {
