--- a/assets/hero-banner.css
+++ b/assets/hero-banner.css
@@ -3,7 +3,7 @@
   background-repeat: no-repeat;
   background-size: cover;
   min-height: 643px;
-  height: 1px; }
+  height: 80vh; }
 
 .hero-banner__container {
   height: 100%; }
@@ -21,7 +21,7 @@
   line-height: 1;
   letter-spacing: 0;
   color: #FFFFFF;
-  max-width: 700px; }
+  max-width: 765px; }
 
 .hero-banner__text {
   font-size: 16px;
@@ -30,20 +30,6 @@
   color: #FFFFFF;
   margin-bottom: 40px;
   max-width: 350px; }
-
-.hero-banner__btn {
-  font-size: 16px;
-  padding: 12px 36px;
-  background: #FFFFFF;
-  color: #242424;
-  font-weight: 700;
-  border-radius: 12px;
-  display: block;
-  max-width: fit-content; }
-  .hero-banner__btn:hover {
-    background-color: #557DCB;
-    color: #FFFFFF;
-    border: 1px solid #242424; }
 
 @media screen and (max-width: 990px) {
   .hero-banner__bg-image {
@@ -59,13 +45,13 @@
   .hero-banner__bg-image {
     min-height: 250px; }
   .hero-banner__title {
-    font-size: 24px;
+    font-size: 30px;
     max-width: 300px;
     margin-bottom: 10px; }
   .hero-banner__text {
     font-size: 12px;
     max-width: 255px;
     margin-bottom: 16px; }
-  .hero-banner__btn {
+  .hero-banner .btn {
     font-size: 14px;
     padding: 10px 20px; } }
