--- a/assets/newsletter-section.css
+++ b/assets/newsletter-section.css
@@ -28,15 +28,22 @@
     padding: 0 10px;
     border-radius: 8px;
     border: 1px solid #242424;
-    font-size: 14px;
-    font-weight: 500;
     flex: 1;
     margin-right: 8px;
     background-color: #FFFFFF; }
+    .newsletter-section .email-wrap input {
+      height: 100%;
+      width: 100%;
+      font-size: 14px;
+      font-weight: 500;
+      border: unset; }
+      .newsletter-section .email-wrap input:focus {
+        outline: none; }
   .newsletter-section .title {
     color: #242424;
     line-height: 1.2;
-    font-weight: 700; }
+    font-weight: 800;
+    max-width: 600px; }
   .newsletter-section .input-field {
     border: none;
     padding: 0;
@@ -47,7 +54,7 @@
       outline: none; }
     .newsletter-section .input-field::placeholder {
       font-size: 14px; }
-  .newsletter-section .btn-wrap {
+  .newsletter-section .btn {
     max-width: 142px;
     background-color: #242424;
     color: #FFFFFF;
@@ -88,7 +95,7 @@
       padding: 0 10px; }
     .newsletter-section .title {
       font-size: 29px; }
-    .newsletter-section .btn-wrap {
+    .newsletter-section .btn {
       max-width: 120px;
       min-width: 120px; } }
 
@@ -101,7 +108,7 @@
       font-size: 24px; }
     .newsletter-section .email-wrap {
       height: 38px; }
-    .newsletter-section .btn-wrap {
+    .newsletter-section .btn {
       max-width: 100px;
       min-width: 100px;
       height: 38px;
