--- a/assets/product-list.css
+++ b/assets/product-list.css
@@ -1,15 +1,9 @@
 .featured-collection-slider {
   margin-bottom: 120px; }
+  .featured-collection-slider .swiper-slide {
+    max-width: 312px; }
   .featured-collection-slider .wrap {
     position: relative; }
-  .featured-collection-slider .badge {
-    position: absolute;
-    top: 14px;
-    left: 15px;
-    padding: 12px 16px;
-    font-size: 12px;
-    background-color: #FFFFFF;
-    color: #242424; }
   .featured-collection-slider .heart-icon {
     width: 20px;
     height: 18px; }
@@ -27,4 +21,6 @@
     margin-bottom: 70px;
     position: relative; }
     .featured-collection-slider .contents-wrapper {
-      padding-bottom: 50px; } }
+      padding-bottom: 50px; }
+    .featured-collection-slider .page-width {
+      padding-right: 0; } }
