--- a/scss/base.scss
+++ b/scss/base.scss
@@ -1,3 +1,4 @@
+@import "variable.scss";
 * {
     padding: 0;
     margin: 0;
@@ -76,6 +77,52 @@ svg {
 }
 .position-absolute {
     position: absolute;
+}
+.justify-between {
+    justify-content: space-between;
+}
+.btn {
+    z-index: 9;
+    font-size: 16px;
+    font-weight: 700;
+    background-color: $white;
+    height: 50px;
+    color: #242424;
+    border-radius: 18px;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    padding: 8px 40px;
+    transition: 0.3s all ease-in-out;
+    cursor: pointer;
+    border: none;
+    &:hover {
+        background-color: $Chartreuse-Yellow;
+    }
+}
+.success-add-to-cart {
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    padding: 14px 40px;
+    background-color: green;
+    color: #fff;
+    position: fixed;
+    top: 20px;
+    right: 20px;
+    border-radius: 7px;
+}
+.fail-add-to-cart {
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    padding: 14px 40px;
+    background-color: red;
+    color: #fff;
+    position: fixed;
+    top: 20px;
+    right: 20px;
+    border-radius: 7px;
 }
 @media screen and (max-width:990px){
     .page-width {
