--- a/scss/category-section.scss
+++ b/scss/category-section.scss
@@ -1,49 +1,42 @@
 @import "variable.scss";
 .collections {
-        margin-bottom: 120px;
-        &__main-grid {
-            margin: 0 -15px;
-            flex-wrap: wrap;
-        }
-        &__row-wrap {
-            position: relative;
-            max-width: 50%;
-            flex: 50%;
-            padding: 0 15px;
-            margin-bottom: 30px;
-            &:last-child {
-                max-width: 100%;
-                flex: 100%;
-                margin-bottom: 0;
-            }
-        }
-        &__title {
-            font-size: 52px;
-            font-weight: 800;
-            line-height: 1.2;
-            letter-spacing: 0;
-            color: $white;
-            max-width: 480px;
-            top: 30px;
-            left: 30px;
-        }
-        &__btn {
-            font-size: 16px;
-            padding: 15px 24px;
-            background: $white;
-            color: $Mine-Shaft;
-            font-weight: 700;
-            display: block;
-            max-width: fit-content;
-            bottom: 30px;
-            left: 30px;
-            &:hover {
-                background-color: $Indigo;
-                color: $white;
-                border: 1px solid $Mine-Shaft;
+    margin-bottom: 120px;
+    &__main-grid {
+        margin: 0 -15px;
+        flex-wrap: wrap;
+    }
+    &__image {
+        position: relative;
+        overflow: hidden;
+    }
+    &__row-wrap {
+        position: relative;
+        max-width: 50%;
+        flex: 50%;
+        padding: 0 15px;
+        margin-bottom: 30px;
+        &:last-child {
+            max-width: 100%;
+            flex: 100%;
+            margin-bottom: 0;
         }
     }
+    &__title {
+        font-size: 52px;
+        font-weight: 800;
+        line-height: 1.2;
+        letter-spacing: 0;
+        color: $white;
+        max-width: 480px;
+        top: 35px;
+        left: 30px;
+    }
+    .btn {
+        bottom: 30px;
+        left: 30px;
+    }
 }
+
 @media screen and (max-width:1279px) {
     .collections {
        &__title{
@@ -64,7 +57,7 @@
             font-size: 28px;
             max-width: 300px;
         }
-        &__btn {
+        .btn {
             font-size: 14px;
             padding: 12px 20px;
         }
@@ -87,11 +80,16 @@
             top: 20px;
             left: 20px;        
         }
-        &__btn {
+        .btn {
             font-size: 14px;
-            padding: 12px 18px;
+            padding: 8px 18px;
             bottom: 20px;
             left: 20px;
+        }
+        &__image {
+            img {
+                min-height: 225px;
+            }
         }
     }
 }
