--- a/scss/featured-blog-section.scss
+++ b/scss/featured-blog-section.scss
@@ -37,6 +37,12 @@
         margin: 0 4px;
         padding: 18px;
         border-radius: 50%;
+        cursor: pointer;
+        transition: all 0.3s ease-in-out;
+        &:hover {
+            background-color: $Chartreuse-Yellow;
+            transition: all 0.3s ease-in-out;
+        }
     }
     &__icon {
         height: 100%;
