--- a/scss/featured-collection.scss
+++ b/scss/featured-collection.scss
@@ -18,6 +18,11 @@
       border-radius: 35px;
     }
   }
+  .btn {
+    position: absolute;
+    bottom: 30px;
+    left: 30px;
+  }
   .wrapper {
     margin: 0 -15px;
   }
@@ -34,20 +39,6 @@
   }
   .image-wrapper {
     position: relative;
-  }
-  .btn {
-    max-width: 179px;
-    position: absolute;
-    left: 30px;
-    bottom: 30px;
-    z-index: 9;
-    width: 100%;
-    font-size: 16px;
-    font-weight: 700;
-    background-color: white;
-    display: flex;
-    height: 50px;
-    color: $Mine-Shaft;
   }
   .beta {
     img {
@@ -70,7 +61,6 @@
     }
     .btn {
       font-size: 14px;
-      max-width: 150px;
       height: 40px;
     }
     .product-wrap {
@@ -93,9 +83,6 @@
     .title {
       font-size: 36px;
     }
-    .btn {
-      max-width: 134px;
-    }
     .wrapper {
       display: block;
       margin: 0;
@@ -110,16 +97,13 @@
     .title {
       font-size: 40px;
     }
-    .btn {
-      max-width: 150px;
-    }
   }
 }
 @media(max-width: 767px ){
   .featured-collection {
     margin-bottom: 80px;
     .title {
-      font-size: 36px;
+      font-size: 24px;
       top: 20px;
       left: 20px;
       max-width: 240px;
@@ -127,6 +111,7 @@
     .btn {
       left: 20px;
       bottom: 20px;
+      padding: 8px 18px;
     }
     .product-wrap {
       padding: 0 5px;
