--- a/scss/footer.scss
+++ b/scss/footer.scss
@@ -47,9 +47,6 @@
         color: $white;
         letter-spacing: 0;
     }
-    &__change-color {
-        background-color: $Chartreuse-Yellow !important;
-    }
     &__main-grid {
         margin: 0 -40px;
         margin-bottom: 87px;
@@ -65,6 +62,12 @@
         padding: 10px;
         border-radius: 50%;
         margin: 0 6px;
+        transition: 0.3s all ease-in-out;
+        cursor: pointer;
+        &:hover {
+            transition: 0.3s all ease-in-out;
+            background-color: $Chartreuse-Yellow !important;
+        }
     }
     &__payment-item {
         padding: 0 17.5px;
