--- a/scss/hero-banner.scss
+++ b/scss/hero-banner.scss
@@ -5,7 +5,7 @@
         background-repeat: no-repeat;
         background-size: cover;
         min-height: 643px;
-        height: 1px;
+        height: 80vh;
     }
     &__container {
         height: 100%;
@@ -23,7 +23,7 @@
         line-height: 1;
         letter-spacing: 0;
         color: #FFFFFF;
-        max-width: 700px;
+        max-width: 765px;
     }
     &__text {
         font-size: 16px;
@@ -32,21 +32,6 @@
         color: $white;
         margin-bottom: 40px;
         max-width: 350px;
-    }
-    &__btn {
-        font-size: 16px;
-        padding: 12px 36px;
-        background: $white;
-        color: $Mine-Shaft;
-        font-weight: 700;
-        border-radius: 12px;
-        display: block;
-        max-width: fit-content;
-        &:hover {
-            background-color: $Indigo;
-            color: $white;
-            border: 1px solid $Mine-Shaft;
-        }
     }
 }
 @media screen and (max-width:990px) {
@@ -70,7 +55,7 @@
             min-height: 250px;
         }
         &__title {
-            font-size: 24px;
+            font-size: 30px;
             max-width: 300px;
             margin-bottom: 10px;
         }
@@ -79,7 +64,7 @@
             max-width: 255px;
             margin-bottom: 16px;
         }
-        &__btn {
+        .btn {
             font-size: 14px;
             padding: 10px 20px;
         }
