--- a/scss/newsletter-section.scss
+++ b/scss/newsletter-section.scss
@@ -36,16 +36,25 @@
     padding: 0 10px;
     border-radius: 8px;
     border: 1px solid $Mine-Shaft;
-    font-size: 14px;
-    font-weight: 500;
     flex: 1;
     margin-right: 8px;
     background-color: $white;
+    input {
+      height: 100%;
+      width: 100%;
+      font-size: 14px;
+      font-weight: 500;
+      border: unset;
+      &:focus {
+        outline: none;
+      }
+    }
   }
   .title {
     color: $Mine-Shaft;
     line-height: 1.2;
-    font-weight: 700;
+    font-weight: 800;
+    max-width: 600px;
   }
   .input-field {
     border: none;
@@ -60,7 +69,7 @@
       font-size: 14px;
     }
   }
-  .btn-wrap {
+  .btn {
     max-width: 142px;
     background-color: $Mine-Shaft;
     color: $white;
@@ -114,14 +123,14 @@
     .title {
       font-size: 29px;
     }
-    .btn-wrap {
+    .btn {
       max-width: 120px;
       min-width: 120px;
     }
    }
 }
 @media(max-width: 990px ){
-  .newsletter-section {
+  .newsletter-section { 
     padding: 40px 0;
     
   .note {
@@ -133,7 +142,7 @@
    .email-wrap {
     height: 38px;
   }
-   .btn-wrap {
+   .btn {
     max-width: 100px;
     min-width: 100px;
     height: 38px;
