--- a/scss/product-list.scss
+++ b/scss/product-list.scss
@@ -1,17 +1,11 @@
 @import "variable.scss";
 .featured-collection-slider  {
   margin-bottom: 120px;
+  .swiper-slide {
+    max-width: 312px;
+  }
   .wrap {
     position: relative;
-  }
-  .badge {
-    position: absolute;
-    top: 14px;
-    left: 15px;
-    padding: 12px 16px;
-    font-size: 12px;
-    background-color: $white;
-    color: $Mine-Shaft;
   }
   .heart-icon {
     width: 20px;
@@ -37,6 +31,9 @@
     position: relative;
     .contents-wrapper {
       padding-bottom: 50px;
+    }
+    .page-width {
+      padding-right: 0;
     }
   }
 }
